--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <main>
             <section class="main">
-                <a href="pps2.html"><div class="item">
+                <a href="couple.html"><div class="item">
                     <h2>ПАРНЫЕ ТАКТИКИ</h2>
                     <p><i><font color="grey">Тактики для двоих</font></i></p>
                 </div></a>
