--- a/couple.html
+++ b/couple.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="PPSlogo.png" class="logo"></a>
+            <a href="https://nortfy.github.io/WithBeerWillGo/"><img src="PPSlogo.png" class="logo"></a>
         </header>
         <main>
             <aside>
