--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img src="https://nortfy.github.io/WithBeerWillGo/couple.html" class="logo">
+            <img src="PPSlogo.png" class="logo">
         </header>
 
         <main>
