--- a/couple.html
+++ b/couple.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>ПодПивоСойдёт - Парные</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="PPSstyle.css">
     </head>
     <body>
@@ -48,7 +50,7 @@
                     </div>
                 </div>
                 <div class="tactic">
-                    <h2 class="tactic_name">СМЕРТЬ ПОДКРАЛАСЬ НЕСПЕША</h2><button class="open">ПОДРОБНЕЕ</button><br>
+                    <h2 class="tactic_name_little">СМЕРТЬ ПОДКРАЛАСЬ НЕСПЕША</h2><button class="open">ПОДРОБНЕЕ</button><br>
                     <img src="Heroes/Clinkz.png" align="left" class="tactic_img">
                     <img src="Heroes/Lifestealer.webp" align="left" class="tactic_img">
                     <p><i><font color="lightgrey">Clinkz + Lifestealer</font></i></p>
