--- a/couple.html
+++ b/couple.html
@@ -64,7 +64,7 @@ Lifestealer залезает в Clinkz, после чего они в невид
                     <h2 class="tactic_name">ЗАПЛЕВАЛИ ЛИЦО</h2><button class="open">ПОДРОБНЕЕ</button><br>
                     <img src="Heroes/Viper.webp" align="left" class="tactic_img">
                     <img src="Heroes/FacelessVoid.png" align="left" class="tactic_img">
-                    <p><i><font color="lightgrey">Clinkz + Lifestealer</font></i></p>
+                    <p><i><font color="lightgrey">Viper + Faceless Void</font></i></p>
                     <br>
                     <div class="about">
                         <p>Void со вторым аспектом (можно и с первым, но надо быть аккуратнее и не застанить Viper) прожимает ульту, в которой Viper быстро заплёвывает всех.</p>
