--- a/couple.html
+++ b/couple.html
@@ -71,6 +71,7 @@ Lifestealer залезает в Clinkz, после чего они в невид
                     </div>
                 </div>
                 <div class="tactic">
+                    <h2 class="tactic_name_little">КОНТРА: ХУСКАР + АРМЛЕТ</h2>
                 </div>
             </selection>
         </main>
