--- a/couple.html
+++ b/couple.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="tactic">
-                    <h2 class="tactic_name">НЕВИДИМОЕ ОГРАБЛЕНИЕ</h2><button class="open">ПОДРОБНЕЕ</button><br>
+                    <h2 class="tactic_name">ТВОЮ ЖОПУ ЗАКАЗАЛИ</h2><button class="open">ПОДРОБНЕЕ</button><br>
                     <img src="Heroes/Riki.webp" align="left" class="tactic_img">
                     <img src="Heroes/BountyHunter.png" align="left" class="tactic_img">
                     <p><i><font color="lightgrey">Riki + Bounty Hunter</font></i></p>
